test/fixtures/public/analysis/fail/undefined_var1.jmm
class Child {
    int a;
    boolean b;

    public static void main(String[] args) {
        int a;
        int c;
        c = a; // Undefined a
    }
}